# xlui

./: CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: webview.rs
example/: 1.wgsl  circle.rs  hello_world.rs  hello_xlui.rs  render.rs  tr.rs
examples/: backend.rs  custom_font.rs  custom_window.rs  hello_world.rs  listview.rs  mutli_windows.rs  widget.rs
res/css/: frame.css  widgets.css
src/: align.rs  error.rs  font.rs  key.rs  lib.rs  map.rs  radius.rs  ui.rs  vertex.rs
src/frame/: context.rs  frame2.rs  mod.rs  window.rs
src/layout/: horizontal.rs  inner.rs  mod.rs  popup.rs  recycle.rs  scroll_area.rs  vertical.rs
src/paint/: button.rs  checkbox.rs  color.rs  combobox.rs  edit.rs  image.rs  line.rs  mod.rs  popup.rs  radio.rs  rectangle.rs  scroll_area.rs  scroll_bar.rs  slider.rs  spinbox.rs  text.rs
src/paint/rectangle/: mod.rs  param.rs
src/paint/triangle/: mod.rs  param.rs
src/render/: mod.rs  rectangle.rs  rectangle.wgsl
src/render/circle/: circle.wgsl  mod.rs  param.rs
src/render/image/: mod.rs  texture.rs
src/render/rectangle/: mod.rs  param.rs  rectangle.wgsl  rectangle2.wgsl
src/render/triangle/: mod.rs  param.rs  triangle.wgsl
src/response/: button.rs  checkbox.rs  combobox.rs  mod.rs  slider.rs  spinbox.rs  textedit.rs
src/shape/: circle.rs  mod.rs  rectangle.rs  ring.rs  triangle.rs
src/size/: border.rs  font.rs  margin.rs  mod.rs  padding.rs  pos.rs  radius.rs  rect.rs
src/style/: color.rs  mod.rs  visual.rs
src/text/: buffer.rs  cchar.rs  mod.rs  render.rs  rich.rs  text_buffer.rs  text_render.rs
src/widgets/: button.rs  cell.rs  checkbox.rs  circle.rs  column.rs  combobox.rs  image.rs  item.rs  label.rs  listview.rs  mod.rs  processbar.rs  radio.rs  rectangle.rs  select.rs  slider.rs  space.rs  spinbox.rs  tab.rs  textedit.rs  triangle.rs
src/widgets/combo/: check.rs  mod.rs
src/widgets/image/: mod.rs  shader.wgsl
src/widgets/scroll/: bar.rs  mod.rs
src/widgets/table/: cell.rs  column.rs  header.rs  mod.rs  param.rs  row.rs
src/widgets/textedit/: buffer.rs  cursor.rs  mod.rs  multi.rs  select.rs  single.rs
src/window/: application.rs  attribute.rs  event.rs  ime.rs  inner.rs  mod.rs  tray.rs  win32.rs  winit_app.rs  winit_window.rs  wino.rs  x11.rs  x11_app.rs
src/window/win32/: clipboard.rs  font.rs  handle.rs  mod.rs  tray.rs  until.rs
src/window/wnit/: handle.rs  mod.rs
src/window/x11/: clipboard.rs  ffi.rs  font.rs  handle.rs  mod.rs
src/window/x11/ime/: bus.rs  context.rs  flag.rs  mod.rs  signal.rs
test/: align.rs  all.rs  frame.rs  hibernate.rs  layout.rs  rectangle.rs  shape.rs  test_win.rs  tray_win.rs  widget.rs  x11_window.rs
tests/: 1.wgsl  align.rs  all.rs  hello_world.rs  hello_xlui.rs  hibernate.rs  layout.rs  shape.rs  table.rs  tabs.rs  widget.rs  x11_ime.rs
