[package]
name = "xlui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/xllgl2017/xlui"
authors = ['xllgl2017']
description = "Rust GUI库"
readme = "README.md"
#https://docs.rs/crate/xlui/latest

[lib]
name = "xlui"
crate-type = ['cdylib', 'rlib']

#[[bin]]
#name = "hello_world"
#path = "example/hello_world.rs"


[[bin]]
name = "hello_xlui"
path = "example/hello_xlui.rs"

[[bin]]
name = "test_layout"
path = "test/layout.rs"

[[bin]]
name = "test_widget"
path = "test/widget.rs"

[[bin]]
name = "test_hibernate"
path = "test/hibernate.rs"

[[bin]]
name = "test_all"
path = "test/all.rs"

[[bin]]
name = "test_x11_window"
path = "test/x11_window.rs"

#[lib]
#name = "xlui-web"
#path = "test/web.rs"
#crate-type = []

[dependencies]
winit = { version = "0.30.11", optional = true }
wgpu = "25.0.2"
pollster = "0.4.0"
glyphon = "0.9.0"
bytemuck = "1.23.1"
ab_glyph = "0.2.31"
image = "0.25.6"
raw-window-handle = "0.6.2"

[target.'cfg(target_os="linux")'.dependencies]
x11 = "2.21.0"
dbus = { version = "0.9.9", default-features = false }


[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_Ime",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory"
]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
debug = false
panic = "abort"
