[package]
name = "xlui"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/xllgl2017/xlui"
authors = ['xllgl2017']
description = "Rust GUI库"
readme = "README.md"
#https://docs.rs/crate/xlui/latest

#[[bin]]
#name = "test_all"
#path = "tests/all.rs"

[[example]]
name = "backend"
doc-scrape-examples = false

[[example]]
name = "custom_font"
doc-scrape-examples = false

[[example]]
name = "hello_world"
doc-scrape-examples = false

[[example]]
name = "listview"
doc-scrape-examples = false

[[example]]
name = "mutli_windows"
doc-scrape-examples = false

[[example]]
name = "widget"
doc-scrape-examples = false

#[[bin]]
#name = "test_334"
#path = "tests/hello_world.rs"

[lib]
name = "xlui"
crate-type = ['cdylib', 'rlib']

[dependencies]
winit = { version = "0.30.11", optional = true }
wgpu = { version = "25.0.2", default-features = false, features = ["vulkan", "webgl", "webgpu"] }
pollster = { version = "0.4.0", default-features = false }
glyphon = "0.9.0"
bytemuck = { version = "1.23.1", default-features = false }
ab_glyph = { version = "0.2.31", default-features = false, features = ["std"] }
raw-window-handle = "0.6.2"

[target.'cfg(target_os="linux")'.dependencies]
x11 = "2.21.0"
dbus = { version = "0.9.9", default-features = false }

[target.'cfg(not(target_os="windows"))'.dependencies]
image = { version = "0.25.8", default-features = false, features = ["png", 'jpeg'] }

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_Ime",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_Graphics_Imaging",
    "Win32_UI_Input_KeyboardAndMouse"
]

[features]
default = []

[package.metadata.docs.rs]
rustc-args = []
cargo-args = []
rustdoc-args = []


[profile.release]
opt-level = 's' #2
lto = true
codegen-units = 1
debug = false
panic = "abort"
